Bugfix: Out of screen error, Connection between front end and backend for disease prediction

--- a/frontend/src/pages/DiseasePredict.css
+++ b/frontend/src/pages/DiseasePredict.css
@@ -19,7 +19,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    max-height: 80vh;
+    overflow: auto;
+    padding-top: 15vw;
 }
 
 .disease-container{
