--- a/frontend/src/pages/FertilizerPredict.css
+++ b/frontend/src/pages/FertilizerPredict.css
@@ -49,8 +49,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    max-height: 80vh;
     overflow: auto;
+    padding-top: 15vw;
 }
 
 .prediction-section{
@@ -68,8 +69,6 @@
     padding-bottom: 1rem;
     height: fit-content;
     margin: 0% 0% 0% 0%;
-    max-height: 40vw;
-    overflow: auto;
 }
 
 .input-title{
